RDM-2042 - Fixed the alignment of the fields

--- a/src/app/cases/viewer/case-viewer.scss
+++ b/src/app/cases/viewer/case-viewer.scss
@@ -23,3 +23,6 @@ ccd-case-header {
 ccd-event-trigger {
   float: right;
 }
+.case-viewer-label {
+  min-width: 300px;
+}
